// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`media-type-folder create should create a folder 1`] = `
{
  "content": [
    {
      "text": """",
      "type": "text",
    },
  ],
}
`;

exports[`media-type-folder create should create a folder with parent 1`] = `
{
  "content": [
    {
      "text": """",
      "type": "text",
    },
  ],
}
`;

exports[`media-type-folder delete should delete a folder 1`] = `
{
  "content": [
    {
      "text": """",
      "type": "text",
    },
  ],
}
`;

exports[`media-type-folder delete should handle non-existent folder 1`] = `
{
  "content": [
    {
      "text": "Error using delete-media-type-folder:
{
  "message": "Request failed with status code 404",
  "response": {
    "type": "Error",
    "title": "The folder could not be found",
    "status": 404,
    "operationStatus": "NotFound"
  }
}",
      "type": "text",
    },
  ],
}
`;

exports[`media-type-folder update should handle non-existent folder 1`] = `
{
  "content": [
    {
      "text": "Error using update-media-type-folder:
{
  "message": "Request failed with status code 404",
  "response": {
    "type": "Error",
    "title": "The folder could not be found",
    "status": 404,
    "operationStatus": "NotFound"
  }
}",
      "type": "text",
    },
  ],
}
`;

exports[`media-type-folder update should update a folder name 1`] = `
{
  "content": [
    {
      "text": """",
      "type": "text",
    },
  ],
}
`;
